# project-rag

./: .gitignore  Dockerfile  Dockerfile.dbinit  Dockerfile.streamlit  README.md  docker-compose-app.yaml  docker-compose-infra.yaml  entrypoint.sh  init-entrypoint.sh  prometheus.yml  pyproject.toml  start.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/: ground-truth-retrieval.csv  rag-eval.csv
e_commerce_rag/: app.py  db.py  db_prep.py  ingest.py  rag.py  test_pg_connection.py
frontend/: app.py
notebooks/: Untitled.ipynb  evaluation.ipynb  rag.ipynb
old_versions_compose/: docker-compose.yaml
